Bug 462751 - Unable to upload files
Summary: Unable to upload files
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-07 18:14 UTC by Matej Starc
Modified: 2022-12-22 21:04 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
log (5.90 KB, text/x-log)
2022-12-07 18:14 UTC, Matej Starc
Details
bug showcase (29.58 KB, image/jpeg)
2022-12-07 18:17 UTC, Matej Starc
Details
Screenshot of failed upload in Neochat and plasma (34.53 KB, image/png)
2022-12-08 01:23 UTC, Aranjedeath
Details
LogAndNeoChatNotification (173.92 KB, image/gif)
2022-12-18 12:47 UTC, cschue88
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matej Starc 2022-12-07 18:14:20 UTC
Created attachment 154399 [details]
log

SUMMARY
As of recently, I am unable to upload files (images, etc.). 


STEPS TO REPRODUCE
Try uploading a file.

OBSERVED RESULT
It is stuck uploading a file (the plasma notification is stuck). I don't know if it is able to access the file in the first place.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.26.4
KDE Frameworks Version: 5.100.0
Qt Version: 5.15.7
Kernel Version: 6.0.11-zen1-1-zen (64-bit)
Graphics Platform: Wayland
Processors: 12 × Intel® Core™ i7-8700 CPU @ 3.20GHz
Memory: 15,5 GiB of RAM
Graphics Processor: AMD Radeon RX 480 Graphics
Comment 1 Matej Starc 2022-12-07 18:17:49 UTC
Created attachment 154400 [details]
bug showcase

The message and the file are not sent. It is just shown to the sender.
Comment 2 Aranjedeath 2022-12-08 01:18:30 UTC
I also have this issue. My logs are similar:

```
QFSFileEngine::open: No file name specified
QFSFileEngine::open: No file name specified
QFSFileEngine::open: No file name specified
QFSFileEngine::open: No file name specified
QFSFileEngine::open: No file name specified
quotient.main: Couldn't open content source "" for reading: "No file name specified"
quotient.main: File transfer failed for id "GeZkC6xF4L167021260211839"
```

Additionally, I could not clear the "file upload" dialog in plasma nor the "upload file" box in chat. I would end with an upload and a cancel running simultaneously. 

SOFTWARE/OS VERSIONS
Operating System: KDE neon 5.26
KDE Plasma Version: 5.26.4
KDE Frameworks Version: 5.100.0
Qt Version: 5.15.7
Kernel Version: 5.15.0-56-generic (64-bit)
Graphics Platform: X11
Processors: 4 × Intel® Core™ i5-6600K CPU @ 3.50GHz
Memory: 15.6 GiB of RAM
Graphics Processor: AMD Radeon RX 5700 XT
Comment 3 Aranjedeath 2022-12-08 01:23:03 UTC
Created attachment 154413 [details]
Screenshot of failed upload in Neochat and plasma
Comment 4 Gergely HORVÁTH 2022-12-13 08:54:03 UTC
I can confirm it. Relevant log:

```
QFSFileEngine::open: No file name specified
QFSFileEngine::open: No file name specified
QFSFileEngine::open: No file name specified
QFSFileEngine::open: No file name specified
quotient.main: Couldn't open content source "" for reading: "No file name specified"
quotient.main: File transfer failed for id "GRZCQQZBHB16709214479011"
QObject::connect(NeoChatRoom, Unknown): invalid nullptr parameter
QObject::connect(NeoChatRoom, Unknown): invalid nullptr parameter
```

Operating System: Arch Linux
KDE Plasma Version: 5.26.4
KDE Frameworks Version: 5.100.0
Qt Version: 5.15.7
Kernel Version: 6.0.11-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 8 × 11th Gen Intel® Core™ i7-11370H @ 3.30GHz
Memory: 15,4 GiB of RAM
Graphics Processor: Mesa Intel® Xe Graphics
Manufacturer: TUXEDO
Product Name: TUXEDO InfinityBook Pro 14 Gen6

```sh
$ pacman -Qs neochat
local/neochat 22.11-1
    A client for matrix, the decentralized communication protocol
```

(when I confirm a bug, can I just change the status to confirmed, or that is reserved for higher level kde members?)
Comment 5 cschue88 2022-12-18 12:47:49 UTC
Created attachment 154669 [details]
LogAndNeoChatNotification

I can reproduce that.
Comment 6 cschue88 2022-12-18 12:48:45 UTC
Confirmed. 

@Gergely HORVÁTH Let's try :)
Comment 7 cschue88 2022-12-18 13:15:49 UTC
(In reply to cschue88 from comment #5)
> Created attachment 154669 [details]
> LogAndNeoChatNotification
> 
> I can reproduce that.

The versions I checked were:
neochat/jammy,now 22.11-0xneon+22.04+jammy+release+build12 amd64
neochat/jammy 22.11-0xneon+22.04+jammy+release+build11 amd64
neochat/jammy 22.11-0xneon+22.04+jammy+release+build10 amd64
Comment 8 Gergely HORVÁTH 2022-12-18 17:11:52 UTC
(In reply to cschue88 from comment #6)
> Confirmed. 
> 
> @Gergely HORVÁTH Let's try :)

Thanks, however I was more curious about the policy, rather than the technical possibility.
Comment 9 cschue88 2022-12-20 13:01:36 UTC
Updated list of versions I checked. All of the following versions are affected:
(Released) neochat/jammy,now 22.11-0xneon+22.04+jammy+release+build12 amd64
(Released) neochat/jammy 22.11-0xneon+22.04+jammy+release+build11 amd64
(Released) neochat/jammy 22.11-0xneon+22.04+jammy+release+build10 amd64

(Test-channel) neochat/jammy,now 22.11+p22.04+tstable+git20221217.1843-0 amd64
Comment 10 Bug Janitor Service 2022-12-20 13:15:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/719
Comment 11 Tobias Fella 2022-12-22 21:04:47 UTC
Git commit de1fa71d8cd235d4f75efc79f712eecf21b2b615 by Tobias Fella.
Committed on 22/12/2022 at 20:53.
Pushed by tfella into branch 'master'.

Fix uploading files

M  +1    -0    src/neochatroom.cpp

https://invent.kde.org/network/neochat/commit/de1fa71d8cd235d4f75efc79f712eecf21b2b615