Fix uploading files

BUG: 462751